Section subheading overlap resolve

--- a/wagtailio/static/sass/components/_icon-bullet.scss
+++ b/wagtailio/static/sass/components/_icon-bullet.scss
@@ -1,4 +1,5 @@
 @use "../abstracts/mixins" as *;
+@use "../abstracts/variables" as *;
 
 .icon-bullet {
     margin-bottom: 50px;
@@ -23,6 +24,7 @@
     }
 
     &__content {
+        @include z-index(overlap);
         grid-column: 2 / span 2;
 
         @include media-query(medium) {
